--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,5 +19,5 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: newman run .\collection.json
+        run: newman run '.\collection.json'
 
