--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      - name: Install htmlextra
+        run: npm intstall -g newman-reporter-htmlextra
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: newman run 'collection.json'
+        run: newman run 'collection.json' -r htmlextra
 
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Newman-Reports
+          path: ./Reports
