--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install htmlextra
-        run: npm intstall -g newman-reporter-htmlextra
+        run: npm install -g newman-reporter-htmlextra
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
